# stac-timelapse

./: .gitignore  404.html  Dockerfile  README.md  cli.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
configuration/: index.html
docs/: api.md  configuration.md  examples.md  getting-started.md  index.md
examples/: beryl_modis.py  gpm_imerg.py  gpm_imerg_global.py  index.html
getting-started/: index.html
search/: search_index.json
server/: app.py  worker.py
stac_timelapse/: __init__.py  config.py  matplotlib_env.py  pipeline.py  render.py  render_cmr.py  s3.py  stac.py
veda_timelapse/: __init__.py  basemap.py  config.py  encode.py  matplotlib_env.py  overlay.py  pipeline.py  render.py  render_cmr.py  s3.py  stac.py
